--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<p>dashboard works!</p>
+<header>
+  <app-website-head-menu></app-website-head-menu>
+</header>
+
+<body>
+    <br/><br/><br/><br/>
+    <div class="tertiarybtn">
+          <button (click)="signOut()">
+            Sign out
+          </button>
+        </div>
+</body>
