--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,7 +50,7 @@
       [routerLink]="['/consultation']"
       class="consult-button"
     >
-      Book a Free Consultation
+      📅 Book a Free Consultation
     </button>
   </div>
 </section>
@@ -261,14 +261,14 @@
         accelerate your growth.
       </p>
       <form class="subscribe-form">
-        <input
+        <!-- <input
           type="phone"
           placeholder="Your phone number"
           width="50%"
           required
           [(ngModel)]="ePhone"
           [ngModelOptions]="{ standalone: true }"
-        />
+        /> -->
         <input
           type="email"
           placeholder="Your email address"
