--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -149,11 +149,10 @@
               </mat-form-field>
 
               <!-- SUBMIT BUTTON -->
-              <div style="text-align: right; margin-top: 20px">
+              <div class="primarybtn" style="text-align: right; margin-top: 20px">
                 <button
                   type="submit"
                   mat-raised-button
-                  color="primary"
                   [disabled]="isBusy"
                 >
                   <mat-progress-spinner
