--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -637,7 +637,7 @@ hr {
 }
 
 .subscribe-form button {
-  background-color: #d9002c;;
+  background-color: #d9002c;
   color: white;
   border: 2px solid white;
   padding: 10px 20px;
