--- a/src/app/modules/auth/create-account/create-account.component.css
+++ b/src/app/modules/auth/create-account/create-account.component.css
@@ -1,5 +1,5 @@
 h2 {
-    margin-bottom: 20px;
+    /* margin-bottom: 5px; */
     color: #333;
     font-size: 22px;
     text-align: center;
@@ -9,7 +9,7 @@ h2 {
     /* //display: flex; */
     flex-direction: column;
     gap: 15px;
-    padding: 20px;
+    padding: 0px 20px;
   }
   
   .radio-group {
