--- a/src/app/modules/auth/create-account/create-account.component.html
+++ b/src/app/modules/auth/create-account/create-account.component.html
@@ -50,22 +50,26 @@
       </div>
 
   <div class="form-field">
-    <mat-form-field appearance="outline" style="width:100%;">
-      <mat-label>Country</mat-label>
-      <mat-select name="country" [(ngModel)]="countryId">
-        <mat-option *ngFor="let option of objCountrys">
-          {{ option.countryName }}
-        </mat-option>
-      </mat-select> 
-    </mat-form-field>
-  </div>
+  <mat-form-field appearance="outline" style="width:100%;">
+    <mat-label>Country</mat-label>
+    <mat-select
+      name="country"
+      [(ngModel)]="countryId"
+      (selectionChange)="getStates(countryId, loggedUser)"
+    >
+      <mat-option *ngFor="let option of objCountrys" [value]="option.CountryID">
+        {{ option.CountryName }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 
   <div class="form-field">
     <mat-form-field appearance="outline" style="width:100%;">
       <mat-label>State</mat-label>
       <mat-select name="state" [(ngModel)]="stateId">
-        <mat-option *ngFor="let option of objStates">
-          {{ option.stateName }}
+        <mat-option *ngFor="let option of objStates" [value]="option.StateID">
+          {{ option.StateName }}
         </mat-option>
       </mat-select> 
     </mat-form-field>
@@ -77,7 +81,9 @@
       <input type="password" matInput id="password" name="password" [(ngModel)]="password" required />
     </mat-form-field>
   </div>
-  <button type="submit" (click)="onSubmit()" mat-raised-button color="primary" [disabled]="isBusy">
+  <div class="button-group">
+  <div class="primarybtn">
+  <button type="submit" (click)="onSubmit()" [disabled]="isBusy">
     <mat-progress-spinner
         *ngIf="isBusy"
         diameter="20"
@@ -88,9 +94,11 @@
         {{ isBusy ? "Creating..." : "Create Account" }}
     
   </button>
-   &nbsp;&nbsp;&nbsp;
-                
-    <button mat-raised-button color="warn" (click)="onCloseClick()">
+  </div>
+    <div class="tertiarybtn">            
+    <button (click)="onCloseClick()">
         Close
     </button>
+  </div>
+</div>
 </form>
