--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,56 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.primarybtn button {
+  background-color: #d9002c;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.primarybtn button:hover {
+  background-color: white;
+  color: #d9002c;
+  border: 1px solid #d9002c;
+}
+
+.secondarybtn button {
+  background-color: #00274f;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.secondarybtn button:hover {
+  background-color: white;
+  color: #00274f;
+  border: 1px solid #00274f;
+}
+
+.tertiarybtn button {
+  background-color: #DAA520;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.tertiarybtn button:hover {
+  background-color: white;
+  color: #DAA520;
+  border: 1px solid #DAA520
+}
+
+.button-group {
+  display: flex;
+  gap: 16px;
+}
