--- a/src/app/modules/services/software-solutions/software-solutions.component.html
+++ b/src/app/modules/services/software-solutions/software-solutions.component.html
@@ -27,3 +27,61 @@
   </div>
 </section>
 
+<section class="design-section">
+  <div class="container">
+    <h2>We create super-awesome designs</h2>
+    <p class="subtitle">
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident.
+    </p>
+
+    <div class="features-grid">
+      <div class="feature-box">
+        <img src="assets/icons/check.svg" alt="check icon">
+        <div>
+          <h4>Amazing Design</h4>
+          <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        </div>
+      </div>
+
+      <div class="feature-box">
+        <img src="assets/icons/check.svg" alt="check icon">
+        <div>
+          <h4>Copywriting</h4>
+          <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        </div>
+      </div>
+
+      <div class="feature-box">
+        <img src="assets/icons/check.svg" alt="check icon">
+        <div>
+          <h4>Development</h4>
+          <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        </div>
+      </div>
+
+      <div class="feature-box">
+        <img src="assets/icons/check.svg" alt="check icon">
+        <div>
+          <h4>24/7 Support</h4>
+          <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="get-started-section">
+  <div class="icon-container">
+    <img src="assets/phone-icon.svg" alt="Phone Icon" />
+  </div>
+  <div class="content">
+    <h2>Let's Get Started</h2>
+    <p>Have a project or partnership in mind? <br />Contact us today for a free consultation.</p>
+  </div>
+  <div class="button-container">
+    <button class="contact-button" (click)="onContactClick()">Contact Us</button>
+  </div>
+</div>
+
+
