--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -187,7 +187,7 @@
     <div class="contact-item">
       <div class="icon phone-icon"></div>
       <h4>PHONES</h4>
-      <p>Phone: <a href="tel:+2349128510854">+2349128510854</a></p>
+      <p>Phone: <a href="tel:+2349128510854">+234-912-851-0854</a></p>
     </div>
 
     <div class="contact-item">
