--- a/src/app/modules/services/services-overview/services-overview.component.html
+++ b/src/app/modules/services/services-overview/services-overview.component.html
@@ -99,6 +99,6 @@
       <h3>Email</h3>
       <p><a href="mailto:omnipurse.ltd@gmail.com">omnipurse.ltd@gmail.com</a></p>
     </div>
-    <a routerLink="/contact" class="btn secondary">Contact Us</a>
+    <a routerLink="/contact-us" class="btn secondary">Contact Us</a>
   </section>
 </div>
