--- a/src/app/modules/services/software-solutions/software-solutions.component.html
+++ b/src/app/modules/services/software-solutions/software-solutions.component.html
@@ -85,6 +85,22 @@
     </div>
   </div>
 </section>
+<section class="explore-products">
+  <div class="explore-content">
+    <div class="explore-text">
+      <h2>Explore Our Products</h2>
+      <p>
+        From custom platforms to powerful business tools, our products are built
+        to solve real challenges. Dive in and discover how we can enhance your workflow.
+      </p>
+      <a routerLink="/products/products-overview" class="explore-btn">View Products</a>
+    </div>
+    <div class="explore-image">
+      <img src="assets/iMG/Products-Preview.jpg" alt="Product Preview" />
+    </div>
+  </div>
+</section>
+
 <div class="get-started-section">
   <div class="icon-container">
     <img src="assets/ICON/phone.svg" alt="Phone Icon" />
@@ -97,7 +113,7 @@
     </p>
   </div>
   <div class="button-container">
-    <button class="contact-button" (click)="onContactClick()">
+    <button class="contact-button" a routerLink="/contact-us">
       Contact Us
     </button>
   </div>
