--- a/src/app/modules/auth/password-manager/password-manager.component.css
+++ b/src/app/modules/auth/password-manager/password-manager.component.css
@@ -60,3 +60,12 @@ button:hover {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
   overflow: hidden;
 }
+
+
+
+input[type="text"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 100%;
+}
