--- a/src/app/modules/auth/password-manager/password-manager.component.html
+++ b/src/app/modules/auth/password-manager/password-manager.component.html
@@ -43,3 +43,47 @@
 
 
 </form></Section>
+
+<div  class="auth-container">
+<div>
+  <h2>Conversion</h2>
+</div>
+
+
+ <div class="radio-group">
+                <label>
+                  <input type="radio" name="checkType" value="cipher" [(ngModel)]="checkType" (change)="oncheckTypeChange()" />
+                  cipher
+                </label>
+                <label>
+                  <input type="radio" name="checkType" value="plain" [(ngModel)]="checkType" (change)="oncheckTypeChange()" />
+                  plain
+                </label>
+              </div>
+              <br/>
+              <div>
+                <label>{{textType}}</label>
+  <input type="text" id="textvalue" name="textvalue" [(ngModel)]="eTextValue" required />
+  <br/> <br/>
+  <label>{{textTypeInvert}}: </label>
+  <label>{{outputValue}}</label>
+  <br/>
+<br/> 
+  <button type="button" mat-raised-button color="primary" [disabled]="isCBusy" (click)="conversion()">
+    <mat-progress-spinner
+                    *ngIf="isBusy"
+                    diameter="20"
+                    mode="indeterminate"
+                    color="accent"
+                    style="vertical-align: middle; margin-right: 10px"
+                  ></mat-progress-spinner>
+                  {{ isCBusy ? "converting..." : "Convert" }}
+    
+  </button>
+   &nbsp;&nbsp;&nbsp;
+                
+    <button type="button" mat-raised-button color="warn" (click)="onConversionClearClick()">
+        Clear
+    </button>
+              </div>
+              </div>
