--- a/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.html
+++ b/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.html
@@ -9,7 +9,7 @@
 
 <section class="smart-benefits">
   <div class="container">
-    <h2>What Smart Automation Offers</h2>
+    <h2>Our Smart Automation Offers</h2>
     <div class="benefit-grid">
       <div class="benefit-item">
         <img src="assets/ICON/home.svg" alt="Smart Home" />
@@ -96,6 +96,13 @@
     <p>
       Let's design your intelligent home or workspace. Consult with us for free.
     </p>
-    <a routerLink="/contact-us" class="btn primary">Book a Consultation</a>
+    <div class="button-group" style="justify-content: center;">
+    <div class="primarybtn">
+    <button routerLink="/consultation" >Book a Consultation</button>
+    </div>
+    <div class="tertiarybtn">
+    <button routerLink="/contact-us" >Contact Us</button>
+    </div>
+    </div>
   </div>
 </section>
