--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   border: 1px solid #d9002c;
 }
 
+.primarybtn a {
+  background-color: #d9002c;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.primarybtn a:hover {
+  background-color: white;
+  color: #d9002c;
+  border: 1px solid #d9002c;
+}
+
 .secondarybtn button {
   background-color: #00274f;
   color: white;
